<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_light"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create_account_text"
        android:textColor="@color/primary_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/railway_font"/>

    <!-- Username -->
    <TextView
        android:id="@+id/createUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/username_text"
        android:textColor="@color/primary_dark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editCreateUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:hint="@string/create_username_hint"
        android:inputType="textPersonName"
        android:textColor="@color/primary_dark" />

    <!-- Password -->
    <TextView
        android:id="@+id/createPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/password_text"
        android:textColor="@color/primary_dark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editCreatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:hint="@string/create_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/primary_dark" />

    <!-- Enter Name -->
    <TextView
        android:id="@+id/createName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name_text"
        android:textColor="@color/primary_dark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editCreateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:hint="@string/create_name_hint"
        android:textColor="@color/primary_dark" />

    <!--  Phone Number -->
    <TextView
        android:id="@+id/CreatePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/phone_text"
        android:textColor="@color/primary_dark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editCreatePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:hint="@string/create_phone_hint"
        android:inputType="phone"
        android:textColor="@color/primary_dark" />

    <!-- Current Weight -->
    <TextView
        android:id="@+id/currentWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/current_weight_text"
        android:textColor="@color/primary_dark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editCurrentWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:hint="@string/current_weight_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/primary_dark" />

    <!-- Goal Weight -->
    <TextView
        android:id="@+id/goalWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/goal_weight_text"
        android:textColor="@color/primary_dark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editGoalWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:hint="@string/goal_weight_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/primary_dark" />

    <!-- Create Account Button -->
    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_account_button"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white" />

    <!-- Return to Login Button -->
    <Button
        android:id="@+id/returnToLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/return_to_login_button"
        android:background="@color/transparent"
        android:textSize="14sp"
        android:textColor="@color/primary_dark" />

</LinearLayout>
